--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "anticlimacticteleservices.clienttest26"
+        applicationId "anticlimacticteleservices.sic"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
