--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VideoProp"></activity>
+        <activity android:name=".VideoProp" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
