--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation  "android.arch.persistence.room:runtime:1.0.0"
+    implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
     annotationProcessor  "android.arch.persistence.room:compiler:1.0.0"
 }
