--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/sic_round"
+        android:icon="@mipmap/sicicon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/sic_round"
         android:supportsRtl="true"
